--- a/.github/workflows/01-minimal.yml
+++ b/.github/workflows/01-minimal.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Say Hello
-        run: echo "Hello from BCIT"
+        run: echo "Hello from BCIT second change"
